assets/css/portfolio.css
:root {
  --backgroundColor: #0a192f;

  --navbarBackgroundColor: rgba(9, 9, 9, 0.5);

  --bordreclor: #8a8282;

  --maintext: #ccd6f6;
  --secondarytext: #8892b0;
  --primarytext: #e71313;
  --hoverColor: #e71313;

  --iconColor: #ccd6f6;

  --headingFont: 'Russo One', sans-serif;
  --linksFont: 'Courier Prime', monospace;
  --secondaryFont: 'Roboto Mono', monospace;
  --paragraphFont: 'Lato', sans-serif;

  --buttonPrimaryColor: #233d63;
  --buttonSecondaryColor: #1c2a3f;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  background-color: var(--backgroundColor);
  border: 0%;
  margin: 0%;
  padding: 0%;
  height: 100%;
}

a {
  color: var(--primarytext);
  text-decoration: none;
  font-family: var(--linksFont);
}

a.active,
a:hover {
  border-bottom: 5px solid white;
}

li {
  list-style-type: none;
}

h1 {
  font-family: var(--paragraphFont);
  color: var(--maintext);
  margin: 2% 0;
}

h2, h3 {
  margin: 1% 0%;
  font-family: var(--headingFont);
  color: var(--maintext);
}

p {
  color: var(--secondarytext);
  font-family: var(--paragraphFont);
  font-size: clamp(5%, 1rem, 90%);
}

span {
  display: inline-block;
  background-color: var(--buttonPrimaryColor);
  color: var(--primarytext);
  font-weight: bold;
  padding: 4px 8px;
  text-align: center;
  border-radius: 5px;
}

i {
  color: var(--iconColor);
  margin-bottom: 5%;
}

.navbar {
  background-color: var(--navbarBackgroundColor);
  position: fixed;
  width: 100%;
  text-align: center;
  top: 0%;
}

.navbar .flex {
  justify-content: space-between;
}

.navbar ul {
  display: flex;
}

/* .navbar li {
  list-style-type: none;
} */

.navbar a {
  font-weight: bold;
  padding: 7px 10px;
  margin: 0 5px;
  border-radius: 3px;
}

.navbar .container {
  max-width: 90%;
}

.menuWrapper {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  visibility: hidden;
}

.menuWrapper .toggle {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  cursor: pointer;
  width: 50px;
  height: 50px;
  opacity: 0;
}

.menuWrapper .hamburger {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  height: 3rem;
  width: 3rem;
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.menuWrapper .hamburger > div {
  position: relative;
  width: 100%;
  height: 2px;
  background-color: var(--maintext);
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.4s ease;
}

.menuWrapper .hamburger > div:before,
.menuWrapper .hamburger > div:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: -10px;
  width: 100%;
  height: 2px;
  background: inherit;
}

.menuWrapper .hamburger > div:after {
  top: 10px;
}

.menuWrapper .toggle:checked + .hamburger > div {
  transform: rotate(135deg);
}

.menuWrapper .toggle:checked + .hamburger > div:before,
.menuWrapper .toggle:checked + .hamburger > div:after {
  top: 0;
  transform: rotate(90deg);
}

.menuWrapper .toggle:checked:hover + .hamburger > div {
  transform: rotate(225deg);
}

.menuWrapper .toggle:not(:checked) ~ .menu {
  visibility: hidden;
}

.menuWrapper .toggle:not(:checked) ~ .menu > div {
  transform: scale(0);
  transition-duration: 0.75s;
}

.menuWrapper .toggle:not(:checked) ~ .menu > div > div {
  opacity: 0;
  transition: opacity 0.4s ease;
}

.menuWrapper .menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  visibility: visible;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  transform: scale(1);
  transition: all 0.4s ease;
}

.menuWrapper .menu > div {
  background: black;
  border-radius: 50%;
  width: 200vw;
  height: 200vw;
  display: flex;
  flex: none;
  align-items: center;
  justify-content: center;
}

.menuWrapper .menu > div > div {
  text-align: center;
  max-width: 90vw;
  max-height: 100vh;
  opacity: 1;
  transition: opacity 0.4s ease;
}

.menuWrapper .menu > div > div > ul > li {
  font-size: clamp(1vh, 1.5rem, 5vw);;
  padding: 1rem;
}

.aboutWrapper {
  min-height: 100%;
  padding: 10% 0;
}

.aboutWrapper .container {
  justify-content: left;
}

.aboutWrapper h1 {
  color: var(--maintext);
  font-family: var(--headingFont);
  white-space: nowrap;
  font-size: 70px;
  font-size: clamp(3vh, 5rem, 8vw);
}

.aboutWrapper h2 {
  color: var(--secondarytext);
  font-family: var(--headingFont);
  font-size: 70px;
  font-size: clamp(3vh, 4.3rem, 8vw);
  /* white-space: nowrap; */
}

.aboutWrapper h4 {
  margin: 2% 0% 0% 0%;
  color: var(--primarytext);
  font-family: var(--linksFont);
  font-size: clamp(0.2vh, 1rem, 4vw);
}

.resumeLink {
  margin: 3%;
  min-width: 3%;
  background-color: var(--buttonPrimaryColor);
  border-color: #343a40;
  display: inline-block;
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
  user-select: none;
  padding: .375rem .75rem;
  font-size: clamp(0.7vh, 1rem, 4vw);
  line-height: 1.5;
  border-radius: .25rem;

}

.aboutWrapper a:hover {
  border-bottom: none;
  background-color: var(--buttonSecondaryColor)
}

.aboutPara {
  margin: 20px 0px 0px;
  max-width: 560px;
}

.experienceWrapper {
  min-height: 100%;
  min-width: 40%;
  padding: 10% 0;
}

.experienceWrapper .flex {
  align-items: flex-start;
  margin: 5% 0%;
}

.experienceWrapper button {
  background-color: var(--buttonPrimaryColor);
  border: 1px solid black;
  font-weight: bold;
  color: var(--primarytext);
  padding: 10px 24px;
  cursor: pointer;
  width: 150px;
  display: block;
}

.experienceWrapper button:not(:last-child) {
  border-bottom: none;
}

.experienceWrapper button:hover {
  background-color: var(--buttonSecondaryColor);
} 

.experienceInfo {
  margin: 0% 5%;
}

.experienceInfo ul {
  list-style: none;
  margin-left: 0;
  padding-left: 0;
}

.experienceInfo li {
  padding-left: 1em;
  text-indent: -1em;
  color: var(--maintext);
  margin: 10px 0px;
  font-family: var(--paragraphFont);
}

.experienceInfo li:before {
  content: "▹";
  color: var(--primarytext);
  padding-right: 5px;
}

.techHut {
  display: none;
}

.raftLabs {
  display: none;
}

.iprogrammer {
  display: block;
}

.projectsWrapper {
  min-height: 100%;
  min-width: 40%;
  padding: 10% 0;
}

.projectsWrapper .flex {
  align-items: flex-start;
  margin: 5% 0%;
}

.projectsWrapper img {
  height: 10rem;
  width: 20rem;
  border-radius: .3rem;
  border: 1px solid #ccc;
}

.projectsWrapper p {
  margin-bottom: 5%;
}

.projectsWrapper span{
  margin: 5px 5px;
}

.projectInfo {
  margin: 0% 5%;
}

.skillsetsWrapper {
  min-height: 100%;
  min-width: 40%;
  padding: 10% 0;
}

.skillsetsWrapper .flex {
  flex-flow: row wrap;
  justify-content: left;
}

.skillList {
  margin: 5% 0%;
}

.skillList h2 {
  color: var(--secondarytext);
}

.skillList img {
  height: 3rem;
  width: 3rem;
}

.skillsIcon {
  text-align: center !important;
  margin: 5% 5%;
}

.connectWrapper {
  min-height: 100%;
  min-width: 40%;
  padding: 10% 0;
}

.connectWrapper .flex {
  flex-flow: row wrap;
  justify-content: space-between;
}

.connectWrapper i {
  display:block;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  height: 3rem;
  width: 3rem;
}

.connectIcon {
  
  padding: 8%;
  text-align: center;
  align-items: center;
  justify-content: space-between;
}

.connectIcon:nth-child(2n) {
  page-break-after: always;
  break-after: always; 
}

.container {
  max-width: 80%;
  margin: 0 auto;
  overflow: auto;
  padding: 0 4%;
}

.flex {
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 1000px){
  .navbar {
    display: none;
  }

  .menuWrapper {
    visibility: visible;
  }

  .aboutWrapper .container {
    display: flex;
    flex-direction: column;
    padding: 30% 0;
  }

  .experienceWrapper .btnGroup {
    display: flex;
    overflow: auto;
    width: 100%;
    justify-content: center;
  }

  .experienceWrapper .experienceInfo {
    text-align: left;
  }

  .container {
    text-align: center;
    max-width: 100%;
  }

  .experienceWrapper .flex {
    display: block;
  }

  .projectsWrapper .flex {
    flex-direction:column;
    align-items: center;
  }

  .skillsetsWrapper .flex {
    flex-flow: none;
    justify-content: center;
  }

  .connectWrapper .flex {
    flex-direction:column;
    align-items: center;
  }

  .connectIcon:nth-child(1n) {
    page-break-after: avoid;
    break-after: avoid; 
  }

  /* .flex {
    flex-direction:column;
    align-items: center;
  }  */
}

